v1.6.0/_sources/tutorials/model_selection.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/model_selection.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_tutorials_model_selection.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_model_selection.py:


.. _model_selection:

Model Selection
===============

In :ref:`model_evaluation`, we saw how to check the performance of an interpolator using
cross-validation. We found that the default parameters for :class:`verde.Spline` are not
good for predicting our sample air temperature data. Now, let's see how we can tune the
:class:`~verde.Spline` to improve the cross-validation performance.

Once again, we'll start by importing the required packages and loading our sample data.

.. GENERATED FROM PYTHON SOURCE LINES 20-37

.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt
    import cartopy.crs as ccrs
    import itertools
    import pyproj
    import verde as vd

    data = vd.datasets.fetch_texas_wind()

    # Use Mercator projection because Spline is a Cartesian gridder
    projection = pyproj.Proj(proj="merc", lat_ts=data.latitude.mean())
    proj_coords = projection(data.longitude.values, data.latitude.values)

    region = vd.get_region((data.longitude, data.latitude))
    # The desired grid spacing in degrees (converted to meters using 1 degree approx. 111km)
    spacing = 15 / 60








.. GENERATED FROM PYTHON SOURCE LINES 38-40

Before we begin tuning, let's reiterate what the results were with the default
parameters.

.. GENERATED FROM PYTHON SOURCE LINES 40-49

.. code-block:: default


    spline_default = vd.Spline()
    score_default = np.mean(
        vd.cross_val_score(spline_default, proj_coords, data.air_temperature_c)
    )
    spline_default.fit(proj_coords, data.air_temperature_c)
    print("R² with defaults:", score_default)






.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    R² with defaults: 0.7960368854786868




.. GENERATED FROM PYTHON SOURCE LINES 50-60

Tuning
------

:class:`~verde.Spline` has many parameters that can be set to modify the final result.
Mainly the ``damping`` regularization parameter and the ``mindist`` "fudge factor"
which smooths the solution. Would changing the default values give us a better score?

We can answer these questions by changing the values in our ``spline`` and
re-evaluating the model score repeatedly for different values of these parameters.
Let's test the following combinations:

.. GENERATED FROM PYTHON SOURCE LINES 60-72

.. code-block:: default


    dampings = [None, 1e-4, 1e-3, 1e-2]
    mindists = [5e3, 10e3, 50e3, 100e3]

    # Use itertools to create a list with all combinations of parameters to test
    parameter_sets = [
        dict(damping=combo[0], mindist=combo[1])
        for combo in itertools.product(dampings, mindists)
    ]
    print("Number of combinations:", len(parameter_sets))
    print("Combinations:", parameter_sets)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Number of combinations: 16
    Combinations: [{'damping': None, 'mindist': 5000.0}, {'damping': None, 'mindist': 10000.0}, {'damping': None, 'mindist': 50000.0}, {'damping': None, 'mindist': 100000.0}, {'damping': 0.0001, 'mindist': 5000.0}, {'damping': 0.0001, 'mindist': 10000.0}, {'damping': 0.0001, 'mindist': 50000.0}, {'damping': 0.0001, 'mindist': 100000.0}, {'damping': 0.001, 'mindist': 5000.0}, {'damping': 0.001, 'mindist': 10000.0}, {'damping': 0.001, 'mindist': 50000.0}, {'damping': 0.001, 'mindist': 100000.0}, {'damping': 0.01, 'mindist': 5000.0}, {'damping': 0.01, 'mindist': 10000.0}, {'damping': 0.01, 'mindist': 50000.0}, {'damping': 0.01, 'mindist': 100000.0}]




.. GENERATED FROM PYTHON SOURCE LINES 73-74

Now we can loop over the combinations and collect the scores for each parameter set.

.. GENERATED FROM PYTHON SOURCE LINES 74-83

.. code-block:: default


    spline = vd.Spline()
    scores = []
    for params in parameter_sets:
        spline.set_params(**params)
        score = np.mean(vd.cross_val_score(spline, proj_coords, data.air_temperature_c))
        scores.append(score)
    print(scores)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    [-6.672752081834777, 0.4845403172740642, 0.8383522700289185, 0.8371988991061056, 0.8351153077200753, 0.8316607509492719, 0.8492629930940236, 0.8418400888233621, 0.837179509183614, 0.8412200336664746, 0.8529555082484436, 0.852172766758575, 0.8401945161939217, 0.8330182923873511, 0.8441706458564976, 0.8491145591352283]




.. GENERATED FROM PYTHON SOURCE LINES 84-85

The largest score will yield the best parameter combination.

.. GENERATED FROM PYTHON SOURCE LINES 85-91

.. code-block:: default


    best = np.argmax(scores)
    print("Best score:", scores[best])
    print("Score with defaults:", score_default)
    print("Best parameters:", parameter_sets[best])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Best score: 0.8529555082484436
    Score with defaults: 0.7960368854786868
    Best parameters: {'damping': 0.001, 'mindist': 50000.0}




.. GENERATED FROM PYTHON SOURCE LINES 92-98

**That is a nice improvement over our previous score!**

This type of tuning is important and should always be performed when using a new
gridder or a new dataset. However, the above implementation requires a lot of
coding. Fortunately, Verde provides convenience classes that perform the
cross-validation and tuning automatically when fitting a dataset.

.. GENERATED FROM PYTHON SOURCE LINES 101-108

Cross-validated gridders
------------------------

The :class:`verde.SplineCV` class provides a cross-validated version of
:class:`verde.Spline`. It has almost the same interface but does all of the above
automatically when fitting a dataset. The only difference is that you must provide a
list of ``damping`` and ``mindist`` parameters to try instead of only a single value:

.. GENERATED FROM PYTHON SOURCE LINES 108-114

.. code-block:: default


    spline = vd.SplineCV(
        dampings=dampings,
        mindists=mindists,
    )








.. GENERATED FROM PYTHON SOURCE LINES 115-117

Calling :meth:`~verde.SplineCV.fit` will run a grid search over all parameter
combinations to find the one that maximizes the cross-validation score.

.. GENERATED FROM PYTHON SOURCE LINES 117-120

.. code-block:: default


    spline.fit(proj_coords, data.air_temperature_c)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    SplineCV(dampings=[None, 0.0001, 0.001, 0.01],
             mindists=[5000.0, 10000.0, 50000.0, 100000.0])



.. GENERATED FROM PYTHON SOURCE LINES 121-123

The estimated best damping and mindist, as well as the cross-validation
scores, are stored in class attributes:

.. GENERATED FROM PYTHON SOURCE LINES 123-128

.. code-block:: default


    print("Highest score:", spline.scores_.max())
    print("Best damping:", spline.damping_)
    print("Best mindist:", spline.mindist_)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Highest score: 0.8529555082484436
    Best damping: 0.001
    Best mindist: 50000.0




.. GENERATED FROM PYTHON SOURCE LINES 129-131

The cross-validated gridder can be used like any other gridder (including in
:class:`verde.Chain` and :class:`verde.Vector`):

.. GENERATED FROM PYTHON SOURCE LINES 131-141

.. code-block:: default


    grid = spline.grid(
        region=region,
        spacing=spacing,
        projection=projection,
        dims=["latitude", "longitude"],
        data_names="temperature",
    )
    print(grid)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <xarray.Dataset>
    Dimensions:      (latitude: 43, longitude: 51)
    Coordinates:
      * longitude    (longitude) float64 -106.4 -106.1 -105.9 ... -94.06 -93.8
      * latitude     (latitude) float64 25.91 26.16 26.41 ... 35.91 36.16 36.41
    Data variables:
        temperature  (latitude, longitude) float64 19.42 19.42 19.43 ... 7.536 7.765
    Attributes:
        metadata:  Generated by SplineCV(dampings=[None, 0.0001, 0.001, 0.01],\n ...




.. GENERATED FROM PYTHON SOURCE LINES 142-145

Like :func:`verde.cross_val_score`, :class:`~verde.SplineCV` can also run the
grid search in parallel using `Dask <https://dask.org/>`__ by specifying the
``delayed`` attribute:

.. GENERATED FROM PYTHON SOURCE LINES 145-148

.. code-block:: default


    spline = vd.SplineCV(dampings=dampings, mindists=mindists, delayed=True)








.. GENERATED FROM PYTHON SOURCE LINES 149-152

Unlike :func:`verde.cross_val_score`, calling :meth:`~verde.SplineCV.fit`
does **not** result in :func:`dask.delayed` objects. The full grid search is
executed and the optimal parameters are found immediately.

.. GENERATED FROM PYTHON SOURCE LINES 152-158

.. code-block:: default


    spline.fit(proj_coords, data.air_temperature_c)

    print("Best damping:", spline.damping_)
    print("Best mindist:", spline.mindist_)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Best damping: 0.001
    Best mindist: 50000.0




.. GENERATED FROM PYTHON SOURCE LINES 159-162

The one caveat is the that the ``scores_`` attribute will be a list of
:func:`dask.delayed` objects instead because the scores are only computed as
intermediate values in the scheduled computations.

.. GENERATED FROM PYTHON SOURCE LINES 162-165

.. code-block:: default


    print("Delayed scores:", spline.scores_)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Delayed scores: [Delayed('mean-59d5b028-b369-4527-9329-c9621e155695'), Delayed('mean-0826cb6b-7785-4664-883c-0236140cebbd'), Delayed('mean-a5986860-85ec-4ec1-96fb-5626112f890a'), Delayed('mean-faf164c7-0c08-44cb-b428-7da8ff6d8e19'), Delayed('mean-364521f9-4551-4683-a5ff-b82a248937b8'), Delayed('mean-b86b7fc1-aff4-4800-beab-c6fd37b4df1c'), Delayed('mean-9ca4fea7-26f0-43f5-a3de-766002a8f247'), Delayed('mean-08836f82-edd2-4bfd-b37f-8bd51a2613e9'), Delayed('mean-88ac600b-d608-47d5-81d1-6e6d9320b684'), Delayed('mean-76622e31-67a9-4b24-a082-ed32b64dc5fb'), Delayed('mean-366589e9-e05d-4949-ac9d-ab7ad0334d09'), Delayed('mean-83715631-d17e-45a5-b19c-20ece4650334'), Delayed('mean-56215fe5-d736-4c33-83f5-aca8799f274b'), Delayed('mean-e16f18d4-4e8e-4247-b4dd-35c62a7fb371'), Delayed('mean-9b7def8f-d008-4233-b49b-129043366279'), Delayed('mean-95c561d7-a5c3-43ec-96f2-ddd80733e03b')]




.. GENERATED FROM PYTHON SOURCE LINES 166-170

Calling :func:`dask.compute` on the scores will calculate their values but
will unfortunately run the entire grid search again. So using
``delayed=True`` is not recommended if you need the scores of each parameter
combination.

.. GENERATED FROM PYTHON SOURCE LINES 172-177

The importance of tuning
------------------------

To see the difference that tuning has on the results, we can make a grid
with the best configuration and see how it compares to the default result.

.. GENERATED FROM PYTHON SOURCE LINES 177-186

.. code-block:: default


    grid_default = spline_default.grid(
        region=region,
        spacing=spacing,
        projection=projection,
        dims=["latitude", "longitude"],
        data_names="temperature",
    )








.. GENERATED FROM PYTHON SOURCE LINES 187-188

Let's plot our grids side-by-side:

.. GENERATED FROM PYTHON SOURCE LINES 188-219

.. code-block:: default


    mask = vd.distance_mask(
        (data.longitude, data.latitude),
        maxdist=3 * spacing * 111e3,
        coordinates=vd.grid_coordinates(region, spacing=spacing),
        projection=projection,
    )

    grid = grid.where(mask)
    grid_default = grid_default.where(mask)

    plt.figure(figsize=(14, 8))
    for i, title, grd in zip(range(2), ["Defaults", "Tuned"], [grid_default, grid]):
        ax = plt.subplot(1, 2, i + 1, projection=ccrs.Mercator())
        ax.set_title(title)
        pc = grd.temperature.plot.pcolormesh(
            ax=ax,
            cmap="plasma",
            transform=ccrs.PlateCarree(),
            vmin=data.air_temperature_c.min(),
            vmax=data.air_temperature_c.max(),
            add_colorbar=False,
            add_labels=False,
        )
        plt.colorbar(pc, orientation="horizontal", aspect=50, pad=0.05).set_label("C")
        ax.plot(
            data.longitude, data.latitude, ".k", markersize=1, transform=ccrs.PlateCarree()
        )
        vd.datasets.setup_texas_wind_map(ax)
    plt.show()




.. image:: /tutorials/images/sphx_glr_model_selection_001.png
    :alt: Defaults, Tuned
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 220-223

Notice that, for sparse data like these, **smoother models tend to be better
predictors**. This is a sign that you should probably not trust many of the short
wavelength features that we get from the defaults.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.996 seconds)


.. _sphx_glr_download_tutorials_model_selection.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: model_selection.py <model_selection.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: model_selection.ipynb <model_selection.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
